--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -18,7 +18,7 @@ hasCJKLanguage: false # Set `true` for Chinese/Japanese/Korean.
 defaultContentLanguageInSubdir: false
 
 # Uncomment for google analytics
-# googleAnalytics: UA-123-45
+googleAnalytics: UA-63217783-1
 
 markup:
   # Do not modify markup.highlight
