--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -2,13 +2,13 @@ baseURL: /
 title: timothee.pro
 
 # Comment when installing using Hugo Modules
-theme: eureka
+#theme: eureka
 # Uncomment when installing using Hugo Modules
-#theme: github.com/wangchucheng/hugo-eureka
+theme: wangchucheng.com/hugo-eureka
 
 paginate: 3
 copyright: >
-  &copy; 2021 Timothée DORAND
+  &copy; 2023 Timothée DORAND
 enableEmoji: true
 enableGitInfo: false
 summaryLength: 75
