--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,6 @@
 mainSections:
   - posts
-description: Eureka is a elegant and powerful theme for Hugo.
+description: Vous trouverez sur ce site l'avancement des side projects et reflexions de Timothée DORAND.
 
 repoEditURL:
 
