--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -9,7 +9,13 @@ dateFormat:
 homeInfoParams:
   Title: From Paris to Berlin
     # Content: Je suis développeur web fullstack, diplômé de <a href="https://iim.fr">l'IIM</a> en 2019 et responsable de l'espace Carte Bancaire en ligne chez Société Générale jusqu'en 2024. Pendant mon temps libre, je m'occupe du site et de la programmation de ma propre émission chez la webradio <a href="https://www.radio-sofa.com">Radio Sofa</a>.
-  Content: Web developper during the day and musician and at night. Learn more about me in the <a href="/posts/about" >About page.</a> <br/> <i>Développeur web le jour et musicien la nuit. En savoir plus sur la <a href="/posts/about" >page A propos.</a> </i> <br/><br/>Please find below my latests projects. <br><i>Vous trouverez ci-dessous mes derniers projets.</i>
+  Content: >
+    Web developper during the day and musician and at night. 
+    Learn more about me in the <a href="/posts/about" >About page.</a>
+    <br/> <i>Développeur web le jour et musicien la nuit. 
+    En savoir plus sur la <a href="/posts/about" >page A propos.</a> </i>
+    <br/><br/>Please find below my latests projects. 
+    <br><i>Vous trouverez ci-dessous mes derniers projets.</i>
 socialIcons:
   - name: github
     url: https://github.com/TimDorand
